--- a/recommender/users/templates/profile.html
+++ b/recommender/users/templates/profile.html
@@ -106,11 +106,12 @@
 
                         <div>
                             <label for="state" class="block text-sm font-medium text-gray-700">Select State:</label>
-                            <select id="state" name="state" class="w-full p-2 border border-gray-300 rounded-md">
+                            <select id="state" name="state" class="w-full p-2 border border-gray-300 rounded-md"
+                                    onchange="get_district(this)">
                                 <option value="">Select a State</option>
                                 {% for state in states %}
                                     <option value="{{ state.id }}"
-                                            {% if state.id == profile.state %}selected{% endif %}>
+                                            {% if state.id == profile.state.pk %}selected{% endif %}>
                                         {{ state.name }}
                                     </option>
                                 {% endfor %}
@@ -136,28 +137,39 @@
     </div>
 
     <script>
+
+        function get_district(element, isSelected = false) {
+            console.log(element)
+            let stateId = element.value;
+            if (stateId) {
+                $.ajax({
+                    url: "/district-list/" + stateId + "/",
+                    type: "GET",
+                    dataType: "json",
+                    success: function (response) {
+                        console.log(response);
+                        let districtDropdown = $("#district");
+                        districtDropdown.empty();
+                        districtDropdown.append('<option value="">Select District</option>');
+                        $.each(response, function (index, district) {
+                            var selected = parseInt("{{profile.district.pk}}") === district.id && isSelected ? "selected" : "";
+                            districtDropdown.append(`<option value="${district.id}" ${selected}>${district.name}</option>`);
+                        });
+                    }
+                });
+            } else {
+                $("#district").empty().append('<option value="">Select District</option>');
+            }
+        }
+
+        var state_input = document.getElementById('state')
+        get_district(
+            state_input,
+            true
+        )
+
         $(document).ready(function () {
-            $("#state").change(function () {
-                let stateId = $(this).val();
-                if (stateId) {
-                    $.ajax({
-                        url: "/district-list/" + stateId + "/",
-                        type: "GET",
-                        dataType: "json",
-                        success: function (response) {
-                            console.log(response);
-                            let districtDropdown = $("#district");
-                            districtDropdown.empty();
-                            districtDropdown.append('<option value="">Select District</option>');
-                            $.each(response, function (index, district) {
-                                districtDropdown.append('<option value="' + district.id + '">' + district.name + '</option>');
-                            });
-                        }
-                    });
-                } else {
-                    $("#district").empty().append('<option value="">Select District</option>');
-                }
-            });
+
 
             $("#updateProfileButton").click(function () {
                 const formData = {
